possible fix for clue ui on ios

--- a/src/components/Game/Prepare/Clue/Clue.scss
+++ b/src/components/Game/Prepare/Clue/Clue.scss
@@ -1,8 +1,6 @@
 .clueComponent {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 1.5rem;
-    align-items: center;
     margin-top: 2rem;
     
     .counterWrapper {
